[gd_scene load_steps=34 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Sprite.gd" type="Script" id=2]
[ext_resource path="res://Assets/Characters/sprite_Shadow.png" type="Texture" id=3]
[ext_resource path="res://Player/GreenNinja/SpriteSheet.png" type="Texture" id=4]
[ext_resource path="res://Weapon/Weapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sounds/sound_Death.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 48, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "AttackD",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "AttackL",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "AttackR",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "AttackU",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "IdleD",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "IdleL",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "IdleR",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "IdleU",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "WalkD",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "WalkL",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "WalkR",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "WalkU",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 5, 4 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 17
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 0, 7 )
texture = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 26 )
animation = "Death"
playing = true
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="ActionTime" type="Timer" parent="Sprite"]
wait_time = 0.2
one_shot = true

[node name="Tween" type="Tween" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 27 )

[node name="Weapon" parent="." instance=ExtResource( 5 )]

[node name="SndHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="action_pressed" from="." to="Sprite" method="action_started"]
[connection signal="action_pressed" from="." to="Weapon" method="on_attack"]
[connection signal="change_direction" from="." to="Sprite" method="_on_change_direction"]
[connection signal="change_direction" from="." to="Weapon" method="_on_change_direction"]
[connection signal="velocity_changed" from="." to="Sprite" method="_on_velocity_changed"]
[connection signal="timeout" from="Sprite/ActionTime" to="." method="_on_ActionTime_timeout"]
[connection signal="timeout" from="Sprite/ActionTime" to="Sprite" method="_on_ActionTime_timeout"]
